# geom

./: CMakeLists.txt  README.md
include/geom/: io.h  ops.h  polyhedron.h
src/: CMakeLists.txt  Geometry.h  io.cpp  ops.cpp  ops_convex_partition.cpp  ops_project.cpp  ops_projection.cpp  ops_volume.cpp  polyhedron.cpp
test/: CMakeLists.txt  geom_convex.cpp  geom_project.cpp  geom_tet_mesh.cpp
